--- a/Neac.Api/Neac.Api.csproj
+++ b/Neac.Api/Neac.Api.csproj
@@ -25,4 +25,10 @@
     <Folder Include="wwwroot\Uploads\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Aspose.Cells">
+      <HintPath>Libs\Aspose.Cells.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
