--- a/Neac.Api/Neac.Api.csproj
+++ b/Neac.Api/Neac.Api.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>63428efb-9bd1-41ee-b079-c3dfe8af7e5f</UserSecretsId>
+	  <EnableUnsafeBinaryFormatterSerialization>true</EnableUnsafeBinaryFormatterSerialization>
   </PropertyGroup>
 
   <ItemGroup>
