--- a/ClientApp/client-app/package.json
+++ b/ClientApp/client-app/package.json
@@ -24,6 +24,7 @@
     "@ngrx/store": "^10.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.1",
+    "chart.js": "^2.9.4",
     "jquery": "^3.6.0",
     "ngrx-store-localstorage": "^12.0.1",
     "primeicons": "^4.1.0",
